--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100vw;
     font-family:Arial, Helvetica, sans-serif;
 }
 .container{
