Fixed the viewPort bug

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 .container{
     box-shadow: 1px 1px 5px black inset;
     height: auto;
-    width: 500px;
+    width: 90%;
     border-radius: 20px;
     background-color: white;
     padding-bottom: 20px;
